<resources>
    <string name="app_name">App Fotografi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="e_mail">E-mail</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="text_tos">By clicking on \'Daftar\' you agree to our \n Terms of Use and Privacy Policy.</string>
    <string name="rate_pelayanan_kami">Rate Pelayanan Kami</string>
    <string name="nama_fotografer">Fotografer belum tersedia</string>
    <string name="nilai">5</string>
    <string name="min">0</string>
    <string name="makx">10</string>
    <string name="tolong_komentar">Tolong beri komentar Anda, jika berkenan!</string>
    <string name="komentar">Komentar</string>
    <string name="kirim">Kirim</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="rp">Rp</string>
    <string name="divide">:</string>
    <string name="biaya_1">Biaya</string>
    <string name="tempat_fotografi_2">Tempat Fotografi 2</string>
    <string name="tempat_fotografi_1">Tempat Fotografi</string>
    <string name="jenis_sesi">Jenis Sesi</string>
    <string name="status">Searching</string>
    <string name="tanggal_mulai">Tanggal mulai</string>
    <string name="jam_status">Jam status</string>
    <string name="proceed_to_next_phase">Proceed to Next Phase</string>
    <string-array name="nama_tempat">
        <item>Dago</item>
        <item>Kopo</item>
        <item>Lembang</item>
        <item>Ciwidey</item>
        <item>Pasteur</item>
        <item>Soreang</item>
        <item>Ciparay</item>
        <item>Maribaya</item>
        <item>Alun-Alun</item>
        <item>Kawah Putih</item>
        <item>Tangkuban Perahu</item>
    </string-array>
    <string-array name="nama_bulan">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
    <string name="title_activity_halaman_utama_revised">App Fotografi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="beri_ulasan">Beri Ulasan</string>
    <string name="ulasan">Ulasan</string>
</resources>
